# garden-pi

./: Cargo.toml  README.md  circuit-diagrams.pptx
examples/grpc-worker/: Cargo.toml  build.rs
examples/grpc-worker/proto/: grpc_worker.proto
examples/grpc-worker/src/: main.rs
examples/tonic-grpc/: Cargo.toml  build.rs
examples/tonic-grpc/proto/: tonic-grpc.proto
examples/tonic-grpc/src/: main.rs
examples/unix-sockets/: Cargo.toml
garden-rpc/: Cargo.toml  build.rs
garden-rpc/proto/: garden_pi.proto
garden-rpc/src/: lib.rs
garden-server/: Cargo.toml
garden-server/examples/: unix-sockets.rs
garden-server/src/: main.rs
