[package]
name = "garden-rpc"
version = "0.1.0"
authors = ["Eran Cohen <ceranco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.3.1"
prost = "0.6.1"
prost-types = "0.6.1"

[build-dependencies]
tonic-build = "0.3.1"
